# scryerpy

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_scryer.py
tests/examples/: trs.pl
